--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1>{{title}}</h1>
+<h1>Careline - {{title}}</h1>
+
 <nav>
   <a routerLink="/cl-dashboard">Dashboard</a>
   <a routerLink="/cl-heroes">Heroes</a>
