[ Angular-3 ] 修改 hover 的 color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <h1>Careline - {{title}}</h1>
 
 <nav>
-  <a routerLink="/cl-dashboard">Dashboard</a>
-  <a routerLink="/cl-heroes">Heroes</a>
+  <a routerLinkActive="active" routerLink="/cl-dashboard">Dashboard</a>
+  <a routerLinkActive="active" routerLink="/cl-heroes">Heroes</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
