[ RWD-1 ] 寬度 <= 992px flexbox layout

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -23,10 +23,21 @@ h4 {
 }
 .grid {
   margin: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-.col-1-4 {
-  width: 25%;
+
+@media only screen and (min-width: 992px) {
+  .col-1-4 {
+    flex-grow: 1;
+    flex-basis: 25%;
+
+  }
 }
+
+
 .module {
   padding: 20px;
   text-align: center;
