--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -42,6 +42,12 @@ h4 {
     flex-basis: 50%;
   }
 }
+@media only screen and (max-width: 767px) {
+  .col-1-4 {
+    flex-grow: 1;
+    flex-basis: 100%;
+  }
+}
 
 
 .module {
