[ rx/js ] 用 rx/js 的 subject 多個元件的通知處理

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,10 @@
   <a routerLinkActive="active" routerLink="/cl-dashboard">Dashboard</a>
   <a routerLinkActive="active" routerLink="/cl-heroes">Heroes</a>
 </nav>
+
+<!-- 計數器 -->
+<app-counter></app-counter>
+
 <router-outlet></router-outlet>
+
 <app-messages></app-messages>
